# thesis

./: CMakeLists.txt  README.md
benchmarks/: barto-big.track  linked_rings.tra  linked_rings.trew  racetrack-easy.track  racetrack-hard.track  racetrack-ring.track  res.tra  res2.trew  res3.trew  resource.tra  resource1.trew  resource2.trew  resource3.trew  resource_gems.trew  resource_gold.trew  sea_treasure1.txt  sea_treasure_convex.txt  test_mdp.tra  test_mdp.trew
benchmarks/pareto_taskgraph/: rew1.trew  rew2.trew  taskgraph101.trew  taskgraph102.trew  taskgraph5.tra
benchmarks/racetracks/: racetrack-hard.track  readme.txt  ring.track  straight.track
benchmarks/taskgraph/: out.tra  rew1.trew  taskgraph30.tra  taskgraph51.trew  taskgraph52.trew
benchmarks/taskgraph2/: taskgraph301.trew  taskgraph302.trew  taskgraph502.trew
benchmarks/teamform/: teamform2.tra  teamform21.trew  teamform22.trew  teamform3.tra  teamform31.trew  teamform32.trew  teamform3_2.trew
benchmarks/treasures/: readme.txt
benchmarks/uav/: out.tra  out1.trew  out2.trew  uav10.tra  uav101.trew  uav102.trew  uav20.tra  uav201.trew  uav202.trew  uav5.tra  uav51.trew
include/: eval_example.hpp  evaltools.txt  evaluation.hpp  frozen_lake.cpp  parser.hpp  parser_evaluation.hpp  racetrack.cpp  resource_gathering.cpp  sea_treasure.cpp  seeder.cpp  seeder.hpp
include/benchmarks/: core.hpp  (+4 more)
src/: CMakeLists.txt  evaluation.cpp  main.cpp  oldmain.txt  parser.cpp  parser.hpp
tests/: CMakeLists.txt  brtdp_tests.hpp  pareto_tests.hpp  parser_tests.hpp  polygon_tests.hpp  tests_main.cpp
(+38 files in other folders)
